fix(list): ensure proper alignment of item actions with margin-inline-start

--- a/projects/igniteui-angular/core/src/core/styles/components/list/_list-theme.scss
+++ b/projects/igniteui-angular/core/src/core/styles/components/list/_list-theme.scss
@@ -229,6 +229,7 @@
         justify-content: center;
         color: var-get($theme, 'item-action-color');
         gap: if($variant == 'indigo', sizable(rem(4), rem(6), rem(8)), rem(8px));
+	    margin-inline-start: auto;
 
         &:empty {
             display: none;
